# clabs

./: CMakeLists.txt  README.md  main.cpp  main_lab2.cpp
activation/: activation.cpp  activation.h
classifier/: classifier.cpp  classifier.h
data/: lab2_results.csv  lab2_weights.csv  results.csv  train.csv  weights.csv
generator/: generator.cpp  generator.h
geneticalg/: geneticalg.cpp  geneticalg.h
math/matrix/: matrix.cpp  matrix.h
math/random/: random.cpp  random.h
math/vector/: vector.cpp  vector.h
neural/: neural_trainer.h  neuralnetwork.cpp  neuralnetwork.h
python/: plot_comparison.py  plot_comparison_with_boundaries.py
